--- a/style.css
+++ b/style.css
@@ -1,61 +1,62 @@
+* {
+	font-family: 'Rubik', sans-serif;
+}
+
 body {
 	background-color: lightgrey;
-	font-family: 'Open Sans', sans-serif;
-    background-image:url("images/DSC_0154.jpg");
-	background-size: cover; /* cover */
+	background-image:url("images/098_05.jpg");
+	background-size: cover; 
 	background-repeat: no-repeat;
 }
 
 header {
-  text-align: center;
-  padding: 20px;
+	text-align: center;
+	padding: 20px;
 }
 
 article {
 	background-color: #F1F1F1;
-	opacity: 0.75
+	opacity: 0.75;
+	padding: 10;
+}
+
+h1 {
+	color: #FF8C00; /* dark orange */
+	margin-left: 100px;
+	margin-right: 100px;
+}
+
+p {
+	color: #036602; /* dark green*/
+	margin-left: 100px;
+	margin-right: 100px;
+}
+
+footer {
+	text-align: left;
+	padding: 10;
+	font-size: 15px;
+	color: white;
 }
 
 /* The navbar container */
 nav {
-  overflow: hidden;
-  background-color: #333;
+	overflow: hidden;
+	background-color: #333;
 }
 
 /* Navbar links */
 nav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
 
 /* Links - change color on hover */
 nav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-
-h1 {
-	color: #FF8C00;
-	margin-left: 100px;
-	margin-right: 100px;
-	padding: 10;
-}
-
-p {
-	color: #058103;
-	margin-left: 100px;
-	margin-right: 100px;
-	padding: 10;
-}
-
-footer {
-  text-align: left;
-  padding: 10;
-  font-size: 15px;
-  color: white;
+	background-color: #ddd;
+	color: black;
 }
